2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (check-doc-markup): Fixed setting for DOC_FLAGS. The
	  option '-visualwarn' does not exist anymore. Replaced by the
	  option '-deprecated'. Thanks to Larry Virden for reporting the
	  problem.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* install.tcl: Changed to notify the user if the directory to
	  install is not a source distribution but a CVS snapshot. Right
	  now a direct installation of a CVS snapshot is not possible.

	* Fixed bug #614591 throughout. Numerous modules updated. Also
	  first round of getting version number consistents, and updated
	  for a 1.4 release of the whole.

2003-04-09  Andreas Kupries  <andreask@activestate.com>

	* New module: devtools. Internal use only for now. Does not
	  contain true packages.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in (MODULES): Added the soundex module.

2003-03-28  Andreas Kupries  <andreask@activestate.com>

	* README: Updated information about acceptable documentation
	  formats, i.e. added doctools, made it the most prefered
	  format. This fixes the [Bug #685270], reported by Larry Virden
	  <lvirden@users.sourceforge.net>.

2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* README: Updated to refer to the SF website for Tcllib. Thanks to
	  Larry Virden <lvirden@users.sourceforge.net> for the report and
	  fix. [Bug #707607].

2003-03-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/ntp: New module ntp created for time related network
	protocol stuff. Added RFC868 (TIME) protocol client and example.

2003-03-13  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in (install-libraries): Extended special code for
	  doctools to install the new idx and toc engines.

2003-02-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/des: Imported and tcllib-ised the DES package
	from wiki page "DES in Tcl" by Jochen Loewer. NOT added to the